--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,16 @@
 annotated-types==0.7.0
 anyio==4.10.0
+Brotli==1.1.0
 certifi==2025.8.3
+cffi==2.0.0
 click==8.2.1
+cssselect2==0.8.0
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.116.1
 fastapi-cli==0.0.11
 fastapi-cloud-cli==0.1.5
+fonttools==4.60.1
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -16,10 +20,14 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+pillow==12.0.0
+psycopg2-binary==2.9.10
+pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
+pydyf==0.11.0
 Pygments==2.19.2
-psycopg2-binary==2.9.10
+pyphen==0.17.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -29,13 +37,18 @@ rignore==0.6.4
 sentry-sdk==2.38.0
 shellingham==1.5.4
 sniffio==1.3.1
-sqlalchemy==2.0.43
+SQLAlchemy==2.0.43
 starlette==0.47.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 typer==0.17.4
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.35.0
-# uvloop==0.21.0
+uvloop==0.21.0
 watchfiles==1.1.0
+weasyprint==66.0
+webencodings==0.5.1
 websockets==15.0.1
+zopfli==0.2.3.post1
